--- a/web/home.html
+++ b/web/home.html
@@ -5,5 +5,6 @@
 <body>
 <br>
 Selamat Datang di Rumah Sakit Umum Universitas Syiah Kuala.
+kami melayani dengan sepenuh hati semoga anda lekas sembuh
 </body>
 </html>
